fix gallery image overflow and compiles css

--- a/socialschools_cms/static/css/site.less
+++ b/socialschools_cms/static/css/site.less
@@ -45,7 +45,7 @@ img.school-logo {
 }
 
 div.css-login {
-    padding: 20px 0;
+    padding: 25px 0;
 }
 
 .css-topbar {
@@ -250,6 +250,7 @@ div.css-login {
 */
 
 .css-cmsplugin_gallery {
+    margin-bottom: 0;
     .carousel-indicators {
         left: 20px;
         bottom: 20px;
